# I-dev

./: .gitignore  BUSINESS_PLATFORMS_INTEGRATION_README.md  BUSINESS_PLATFORMS_WEB3_PAYMENTS_README.md  CANISTER_93343-A7BDB-4F45F_README.md  CARGO_TOML_FIX.md  CHANGELOG.md  DECENTRALIZED_INFRASTRUCTURE_README.md  DFX_INSTALLATION_GUIDE_WINDOWS.md  Dockerfile.icp  ENVIRONMENT_GUIDE.md  ENVIRONMENT_SETUP.md  Enhanced_Design_Report.md  FINAL_DOCUMENTATION.md  ICP_DEPLOYMENT_CHECKLIST_REPORT.md  ICP_DEPLOYMENT_GUIDE.md  ICP_QUICK_START.md  ICP_SETUP_COMPLETION_SUMMARY.md  ICP_WINDOWS_INSTALLATION_GUIDE.md  INTERNET_IDENTITY_REDIRECT_SOLUTION.md  Internationalization_Implementation_Report.md  PROFILE_UPDATE_README.md  PROJECT_COMPLETION_SUMMARY.md  REACT_ICONS_FIX.md  README.md  README_ICP.md  SMART_TRACKING_SYSTEM_README.md  TWO_LEVEL_AUTH_README.md  canister-config.json  canister.json  deploy-icp.sh  dfx.json  docker-compose.icp.yml  docker-compose.yml  icp-config.json  icp-production.env  icp.env  icp_rules.yml  init-db.sql  install-dfx-windows.sh  manage-canister.sh  (+12 more)
backend/: Cargo.toml  Dockerfile  README.md  env.example  start.sh
backend/migrations/: 001_initial_schema.sql  002_blockchain_schema.sql
backend/src/: ai.rs  analytics.rs  auth.rs  blockchain_payment.rs  config.rs  confirmation.rs  dashboard.rs  defi.rs  idev_shipping_backend.did  insurance.rs  integrations.rs  lib.rs  main.rs  models.rs  nft.rs  notifications.rs  payment.rs  rating.rs  services.rs  smart_contracts.rs  support.rs  tracking.rs  upload.rs  utils.rs  web3.rs
config/: env.template
grafana/dashboards/: dashboard.yml  icp-dashboard.json
grafana/datasources/: icp-datasource.yml
src/: App.css  App.jsx  i18n.js
src/components/: AISuggestionsComponent.jsx  AdminDashboard.jsx  AdvancedRegistration.jsx  AdvancedVerificationForm.jsx  AuthPage.jsx  BlockchainRatingSystem.jsx  BusinessIntelligenceMarketing.jsx  BusinessPlatformsIntegration.jsx  ComprehensiveSupportSystem.jsx  Layout.jsx  (+21 more)
ssl/: README.md
(+23 files in other folders)
